buildscript {
    ext.kotlin_version = '1.8.0'
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}
plugins{
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
}

allprojects {
    version = "0.0.1"
    group = 'com.junny.land'
}
subprojects {
    apply plugin: 'java'
    apply plugin: 'kotlin'
    apply plugin: 'maven-publish'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    java {
        withSourcesJar()
        withJavadocJar()
    }
    test {
        useJUnitPlatform()
    }
    publishing {
        publications {
            maven(MavenPublication) {
                groupId project.group
                artifactId project.name
                version project.version
                from components.java
            }
        }
    }
}
repositories {
    mavenCentral()
}
dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "org.dhatim:fastexcel:0.14.2"
    testImplementation "org.assertj:assertj-core:3.23.1"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.9.1"
}
compileKotlin {
    kotlinOptions.jvmTarget = '1.8'
}

compileTestKotlin {
    kotlinOptions.jvmTarget = '1.8'
}



